src/modules/base/list/list.css
.list-item {
    height: fit-content;
}

.sortable-item {
    cursor: grab;
}

/* Disable the hover on touch */
@media (hover: hover) {
    .sortable-item:hover {
        background-color: var(--lwc-colorBackground, #f3f2f2);
    }
}

.sortable-item > div {
    width: 100%;
}

.expanded-item > div {
    width: 100%;
}

.sortable-item_moved {
    transition: transform 300ms;
}

.sortable-item.sortable-item_dragged {
    position: relative;
    z-index: 1;
    border: none;
    box-shadow: 0 0 10px rgb(0 0 0 / 40%);
    opacity: 0.8;
    cursor: grabbing;
    background-color: rgba(255, 255, 255, 0.6);
}

.description-text {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

